prod/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-mysql
  labels:
    app: auth-service-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-mysql
  template:
    metadata:
      labels:
        app: auth-service-mysql
    spec:
      volumes:                   
        - name: mysql-volume
          hostPath:
            path: /home/fedgen/storage/mysql/authentication-db/
            type: Directory
      containers:
      - name: web
        image: fedgen/auth:prod 
        imagePullPolicy: Always
        command: ['/bin/bash']           
        args: ['-c','python manage.py migrate; gunicorn -w 4 admin.wsgi -b 0.0.0.0:80']
        ports:
        - containerPort: 80
          protocol: TCP
      - name: mysql                   
        image: akandeav/auth-db:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: mysql-volume
            mountPath: /var/lib/mysql/
